# autobench

./: .gitignore  README.md  overview.md  pyproject.toml
profiles/: desk_easy.json  desk_expert.json  desk_hard.json  desk_medium.json  desk_profile.json  desk_stress.json
scripts/: collect_manual_ready_teacher.sh  edit_view_graph.sh  evaluate_all_view_graph_manifest_closed_loop.sh  evaluate_all_view_graph_manifest_closed_loop_parallel.sh  evaluate_batch2_new_dashscope_models_view_graph_closed_loop.sh  evaluate_batch2_view_graph_closed_loop.sh  evaluate_batch3_aihubmix_view_graph_closed_loop.sh  evaluate_batch4_autodl_view_graph_closed_loop.sh  evaluate_batch5_aihubmix_view_graph_closed_loop.sh  evaluate_batch6_aihubmix_view_graph_closed_loop.sh  evaluate_new_dashscope_models_view_graph_closed_loop_parallel.sh  evaluate_real_models_valid_compare.sh  evaluate_real_models_visible_graph_only.sh  evaluate_real_trajectory.sh  evaluate_real_trajectory_qwen36_compare.sh  evaluate_real_trajectory_qwen37.sh  evaluate_view_graph_intervention_manifest.sh  evaluate_view_graph_models_closed_loop.sh  generate_batch2_intervention_manifests.py  generate_batch3_intervention_manifests.py  generate_saved_intervention_manifests.py  resume_batch356_aihubmix_view_graph_closed_loop.sh  resume_batch3_aihubmix_view_graph_closed_loop.sh  resume_batch5_aihubmix_view_graph_closed_loop.sh  resume_batch6_aihubmix_view_graph_closed_loop.sh  serve_evaluation_replies.sh  serve_real_alignment.sh  start_trajectory_server.sh  start_view_graph_server.sh
task_specs_cn/: assemble_a_toothbrush_set.txt  (+25 more)
(+59 files in other folders)
