[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-embodied-task"
version = "0.1.0"
description = "Automatic embodied task generation from JSONL view graphs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["fastapi>=0.110", "openai>=1.0", "pyarrow>=14", "requests>=2.31", "uvicorn>=0.27"]

[project.scripts]
auto-embodied-task = "auto_embodied_task.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
auto_embodied_task = ["prompt_skills/*.md"]
